<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/big_window_layout"
    android:theme="@android:style/Theme.Wallpaper"
    tools:context=".LauncherActivity">
    <ImageView
      android:id="@+id/wallpaper"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:alpha="0.88"
      android:clickable="true"
      android:contentDescription="@string/backgroundImage"
      android:focusable="true"
      android:scaleType="centerCrop"
      android:src="@drawable/photo_2021_08_08_11_59_56"
      android:visibility="visible" />
    <ImageView
      android:id="@+id/backgroundImage"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/darkBackgroundImage"
      tools:src="@drawable/equ4ehwjpglarge1080" />
    <TextView
      android:id="@+id/statustextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="false"
      android:textColor="@color/yellow"
      android:textSize="28sp"
      tools:text="@string/stopUsingPhone" />
    <TextView
      android:id="@+id/notGoodForPhonetextView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/statustextView"
      android:text="@string/itsNotGoodForYourPhone" />
    <Button
      android:id="@+id/dialerbutton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:text="@string/dialer" />
</RelativeLayout>
